update the account tracking part

--- a/test/client/Split.html
+++ b/test/client/Split.html
@@ -389,13 +389,71 @@
                 <div id="__Page1__cardline">
                   <div id="__Page1__card" onclick="change_page(9);">
                     <div id="__Page1__lock"></div>
-                    <p id="__Page1__cardText">0分期卡</p>
+                    <p id="__Page1__cardText">分期卡</p>
                   </div>
                   <div id="__Page1__card" onclick="change_page(9);">
                     <div id="__Page1__lock"></div>
-                    <p id="__Page1__cardText">0討債卡</p>
+                    <p id="__Page1__cardText">討債卡</p>
                   </div>
-                  <div class="bg-lock" id="__Page1__card">
+                  <div id="__Page1__card" class="bg-lock">
+                    <div class="lock" id="__Page1__lock"></div>
+                    <p id="__Page1__cardText"></p>
+                  </div>
+                </div>
+                <div id="__Page1__cardline">
+                  <div id="__Page1__card" class="bg-lock">
+                    <div class="lock" id="__Page1__lock"></div>
+                    <p id="__Page1__cardText"></p>
+                  </div>
+                  <div id="__Page1__card">
+                    <div id="__Page1__lock"></div>
+                    <p id="__Page1__cardText">主揪卡</p>
+                  </div>
+                  <div id="__Page1__card" class="bg-lock">
+                    <div class="lock" id="__Page1__lock"></div>
+                    <p id="__Page1__cardText"></p>
+                  </div>
+                </div>
+                <div id="__Page1__cardline">
+                  <div id="__Page1__card" class="bg-lock">
+                    <div class="lock" id="__Page1__lock"></div>
+                    <p id="__Page1__cardText"></p>
+                  </div>
+                  <div id="__Page1__card" class="bg-lock">
+                    <div class="lock" id="__Page1__lock"></div>
+                    <p id="__Page1__cardText"></p>
+                  </div>
+                  <div id="__Page1__card" class="bg-lock">
+                    <div class="lock" id="__Page1__lock"></div>
+                    <p id="__Page1__cardText"></p>
+                  </div>
+                </div>
+              </div>
+              <div id="__Page1__collection">
+                <div id="__Page1__cardline">
+                  <div id="__Page1__card">
+                    <div id="__Page1__lock"></div>
+                    <p id="__Page1__cardText">延期卡</p>
+                  </div>
+                  <div id="__Page1__card" class="bg-lock">
+                    <div class="lock" id="__Page1__lock"></div>
+                    <p id="__Page1__cardText"></p>
+                  </div>
+                  <div id="__Page1__card" class="bg-lock">
+                    <div class="lock" id="__Page1__lock"></div>
+                    <p id="__Page1__cardText"></p>
+                  </div>
+                </div>
+                <div id="__Page1__cardline">
+                  <div id="__Page1__card" class="bg-lock">
+                    <div class="lock" id="__Page1__lock"></div>
+                    <p id="__Page1__cardText"></p>
+                  </div>
+                  <div id="__Page1__card">
+                    <div id="__Page1__lock"></div>
+                    <p id="__Page1__cardText">跑腿卡</p>
+                  </div>
+                  <div id="__Page1__card" class="bg-lock">
                     <div class="lock" id="__Page1__lock"></div>
                     <p id="__Page1__cardText"></p>
                   </div>
@@ -403,117 +461,59 @@
                 <div id="__Page1__cardline">
                   <div id="__Page1__card">
                     <div id="__Page1__lock"></div>
+                    <p id="__Page1__cardText">勞務卡</p>
+                  </div>
+                  <div id="__Page1__card" class="bg-lock">
+                    <div class="lock" id="__Page1__lock"></div>
                     <p id="__Page1__cardText"></p>
                   </div>
                   <div id="__Page1__card">
                     <div id="__Page1__lock"></div>
-                    <p id="__Page1__cardText">0跑題卡</p>
-                  </div>
-                  <div id="__Page1__card">
-                    <div id="__Page1__lock"></div>
-                    <p id="__Page1__cardText"></p>
-                  </div>
-                </div>
-                <div id="__Page1__cardline">
-                  <div id="__Page1__card">
-                    <div id="__Page1__lock"></div>
-                    <p id="__Page1__cardText">0勞務卡</p>
-                  </div>
-                  <div id="__Page1__card">
-                    <div id="__Page1__lock"></div>
-                    <p id="__Page1__cardText">0主揪卡</p>
-                  </div>
-                  <div id="__Page1__card">
-                    <div id="__Page1__lock"></div>
-                    <p id="__Page1__cardText"></p>
+                    <p id="__Page1__cardText">飲料卡</p>
                   </div>
                 </div>
               </div>
               <div id="__Page1__collection">
                 <div id="__Page1__cardline">
-                  <div id="__Page1__card">
-                    <div id="__Page1__lock"></div>
-                    <p id="__Page1__cardText">1分期卡</p>
+                  <div id="__Page1__card" class="bg-lock">
+                    <div class="lock" id="__Page1__lock"></div>
+                    <p id="__Page1__cardText"></p>
                   </div>
-                  <div id="__Page1__card">
-                    <div id="__Page1__lock"></div>
-                    <p id="__Page1__cardText">1討債卡</p>
+                  <div id="__Page1__card" class="bg-lock">
+                    <div class="lock" id="__Page1__lock"></div>
+                    <p id="__Page1__cardText"></p>
                   </div>
-                  <div id="__Page1__card">
-                    <div id="__Page1__lock"></div>
+                  <div id="__Page1__card" class="bg-lock">
+                    <div class="lock" id="__Page1__lock"></div>
                     <p id="__Page1__cardText"></p>
                   </div>
                 </div>
                 <div id="__Page1__cardline">
-                  <div id="__Page1__card">
-                    <div id="__Page1__lock"></div>
+                  <div id="__Page1__card" class="bg-lock">
+                    <div class="lock" id="__Page1__lock"></div>
                     <p id="__Page1__cardText"></p>
                   </div>
                   <div id="__Page1__card">
                     <div id="__Page1__lock"></div>
-                    <p id="__Page1__cardText">1跑題卡</p>
+                    <p id="__Page1__cardText">赦免卡</p>
                   </div>
-                  <div id="__Page1__card">
-                    <div id="__Page1__lock"></div>
-                    <p id="__Page1__cardText"></p>
-                  </div>
-                </div>
-                <div id="__Page1__cardline">
-                  <div id="__Page1__card">
-                    <div id="__Page1__lock"></div>
-                    <p id="__Page1__cardText">1勞務卡</p>
-                  </div>
-                  <div id="__Page1__card">
-                    <div id="__Page1__lock"></div>
-                    <p id="__Page1__cardText">1主揪卡</p>
-                  </div>
-                  <div id="__Page1__card">
-                    <div id="__Page1__lock"></div>
-                    <p id="__Page1__cardText"></p>
-                  </div>
-                </div>
-              </div>
-              <div id="__Page1__collection">
-                <div id="__Page1__cardline">
-                  <div id="__Page1__card">
-                    <div id="__Page1__lock"></div>
-                    <p id="__Page1__cardText">2分期卡</p>
-                  </div>
-                  <div id="__Page1__card">
-                    <div id="__Page1__lock"></div>
-                    <p id="__Page1__cardText">2討債卡</p>
-                  </div>
-                  <div id="__Page1__card">
-                    <div id="__Page1__lock"></div>
+                  <div id="__Page1__card" class="bg-lock">
+                    <div class="lock" id="__Page1__lock"></div>
                     <p id="__Page1__cardText"></p>
                   </div>
                 </div>
                 <div id="__Page1__cardline">
-                  <div id="__Page1__card">
-                    <div id="__Page1__lock"></div>
+                  <div id="__Page1__card" class="bg-lock">
+                    <div class="lock" id="__Page1__lock"></div>
+                    <p id="__Page1__cardText"></p>
+                  </div>
+                  <div id="__Page1__card" class="bg-lock">
+                    <div class="lock" id="__Page1__lock"></div>
                     <p id="__Page1__cardText"></p>
                   </div>
                   <div id="__Page1__card">
                     <div id="__Page1__lock"></div>
-                    <p id="__Page1__cardText">2跑題卡</p>
-                  </div>
-                  <div id="__Page1__card">
-                    <div id="__Page1__lock"></div>
-                    <p id="__Page1__cardText"></p>
-                  </div>
-                </div>
-                <div id="__Page1__cardline">
-                  <div id="__Page1__card">
-                    <div id="__Page1__lock"></div>
-                    <p id="__Page1__cardText">2勞務卡</p>
-                  </div>
-                  <div id="__Page1__card">
-                    <div id="__Page1__lock"></div>
-                    <p id="__Page1__cardText">2主揪卡</p>
-                  </div>
-                  <div id="__Page1__card">
-                    <div id="__Page1__lock"></div>
-                    <p id="__Page1__cardText"></p>
+                    <p id="__Page1__cardText">甜點卡</p>
                   </div>
                 </div>
               </div>
@@ -945,9 +945,9 @@
         <div id="__Page47__form__container">
           <form id="__Page47__spending-tracker">
             <div id="__Page47__inform__bar">
-              <input id="__Page47__item_name" type="text" name="account_name" placeholder="家樂福">
+              <input id="__Page47__item_name" type="text" name="account_name" value='麥當勞' readonly>
               <!--label for="account_name"><img src="./midterm_icon/edit.png" alt="cancel" onclick=""></label-->
-              <input id="__Page47__item_cost" type="text" name="account_cost" inputmode="decimal" placeholder="$ 2033">
+              <input id="__Page47__item_cost" type="text" name="account_cost" inputmode="decimal" value='$ 64' readonly>
               <hr class="break_style1">
             </div>
             <div id="other_infos">
@@ -964,8 +964,9 @@
 					<img class="__Page2__starimg" src="./midterm_icon/star_3.png">
 				  </div>
 				  <div id="__Page47__imgUpload" class="__Page47__imgUpload">
-				    <div id="__Page47__frontcameraImg" class="__Page47__cameraImg"></div>
-				    <p id="__Page47__uploadText" class="__Page47__uploadText">上傳圖片</p>
+				    <!-- <div id="__Page47__frontcameraImg" class="__Page47__cameraImg"></div> -->
+				    <!-- <p id="__Page47__uploadText" class="__Page47__uploadText">上傳圖片</p> -->
+            <img src="final_photo/oldman.png" alt="討債卡梗圖" style="height:22vh;width:65vw">
 				  </div>
 				  <div id="__Page47__spec" class="__Page47__spec">
 					<p id="__Page47__specText">功能說明</p>
