--- a/test/client/Split_raw.html
+++ b/test/client/Split_raw.html
@@ -385,11 +385,69 @@
                 <div id="__Page1__cardline">
                   <div id="__Page1__card" onclick="change_page(9);">
                     <div id="__Page1__lock"></div>
-                    <p id="__Page1__cardText">0分期卡</p>
+                    <p id="__Page1__cardText">分期卡</p>
                   </div>
                   <div id="__Page1__card" onclick="change_page(9);">
                     <div id="__Page1__lock"></div>
-                    <p id="__Page1__cardText">0討債卡</p>
+                    <p id="__Page1__cardText">討債卡</p>
+                  </div>
+                  <div class="bg-lock" id="__Page1__card">
+                    <div class="lock" id="__Page1__lock"></div>
+                    <p id="__Page1__cardText"></p>
+                  </div>
+                </div>
+                <div id="__Page1__cardline">
+                  <div class="bg-lock" id="__Page1__card">
+                    <div class="lock" id="__Page1__lock"></div>
+                    <p id="__Page1__cardText"></p>
+                  </div>
+                  <div id="__Page1__card">
+                    <div id="__Page1__lock"></div>
+                    <p id="__Page1__cardText">主揪卡</p>
+                  </div>
+                  <div class="bg-lock" id="__Page1__card">
+                    <div class="lock" id="__Page1__lock"></div>
+                    <p id="__Page1__cardText"></p>
+                  </div>
+                </div>
+                <div id="__Page1__cardline">
+                  <div class="bg-lock" id="__Page1__card">
+                    <div class="lock" id="__Page1__lock"></div>
+                    <p id="__Page1__cardText"></p>
+                  </div>
+                  <div class="bg-lock" id="__Page1__card">
+                    <div class="lock" id="__Page1__lock"></div>
+                    <p id="__Page1__cardText"></p>
+                  </div>
+                  <div class="bg-lock" id="__Page1__card">
+                    <div class="lock" id="__Page1__lock"></div>
+                    <p id="__Page1__cardText"></p>
+                  </div>
+                </div>
+              </div>
+              <div id="__Page1__collection">
+                <div id="__Page1__cardline">
+                  <div id="__Page1__card">
+                    <div id="__Page1__lock"></div>
+                    <p id="__Page1__cardText">延期卡</p>
+                  </div>
+                  <div class="bg-lock" id="__Page1__card">
+                    <div class="lock" id="__Page1__lock"></div>
+                    <p id="__Page1__cardText"></p>
+                  </div>
+                  <div class="bg-lock" id="__Page1__card">
+                    <div class="lock" id="__Page1__lock"></div>
+                    <p id="__Page1__cardText"></p>
+                  </div>
+                </div>
+                <div id="__Page1__cardline">
+                  <div class="bg-lock" id="__Page1__card">
+                    <div class="lock" id="__Page1__lock"></div>
+                    <p id="__Page1__cardText"></p>
+                  </div>
+                  <div id="__Page1__card">
+                    <div id="__Page1__lock"></div>
+                    <p id="__Page1__cardText">跑腿卡</p>
                   </div>
                   <div class="bg-lock" id="__Page1__card">
                     <div class="lock" id="__Page1__lock"></div>
@@ -399,117 +457,59 @@
                 <div id="__Page1__cardline">
                   <div id="__Page1__card">
                     <div id="__Page1__lock"></div>
+                    <p id="__Page1__cardText">勞務卡</p>
+                  </div>
+                  <div class="bg-lock" id="__Page1__card">
+                    <div class="lock" id="__Page1__lock"></div>
                     <p id="__Page1__cardText"></p>
                   </div>
                   <div id="__Page1__card">
                     <div id="__Page1__lock"></div>
-                    <p id="__Page1__cardText">0跑題卡</p>
-                  </div>
-                  <div id="__Page1__card">
-                    <div id="__Page1__lock"></div>
-                    <p id="__Page1__cardText"></p>
-                  </div>
-                </div>
-                <div id="__Page1__cardline">
-                  <div id="__Page1__card">
-                    <div id="__Page1__lock"></div>
-                    <p id="__Page1__cardText">0勞務卡</p>
-                  </div>
-                  <div id="__Page1__card">
-                    <div id="__Page1__lock"></div>
-                    <p id="__Page1__cardText">0主揪卡</p>
-                  </div>
-                  <div id="__Page1__card">
-                    <div id="__Page1__lock"></div>
-                    <p id="__Page1__cardText"></p>
+                    <p id="__Page1__cardText">飲料卡</p>
                   </div>
                 </div>
               </div>
               <div id="__Page1__collection">
                 <div id="__Page1__cardline">
-                  <div id="__Page1__card">
-                    <div id="__Page1__lock"></div>
-                    <p id="__Page1__cardText">1分期卡</p>
+                  <div class="bg-lock" id="__Page1__card">
+                    <div class="lock" id="__Page1__lock"></div>
+                    <p id="__Page1__cardText"></p>
                   </div>
-                  <div id="__Page1__card">
-                    <div id="__Page1__lock"></div>
-                    <p id="__Page1__cardText">1討債卡</p>
+                  <div class="bg-lock" id="__Page1__card">
+                    <div class="lock" id="__Page1__lock"></div>
+                    <p id="__Page1__cardText"></p>
                   </div>
-                  <div id="__Page1__card">
-                    <div id="__Page1__lock"></div>
+                  <div class="bg-lock" id="__Page1__card">
+                    <div class="lock" id="__Page1__lock"></div>
                     <p id="__Page1__cardText"></p>
                   </div>
                 </div>
                 <div id="__Page1__cardline">
-                  <div id="__Page1__card">
-                    <div id="__Page1__lock"></div>
+                  <div class="bg-lock" id="__Page1__card">
+                    <div class="lock" id="__Page1__lock"></div>
                     <p id="__Page1__cardText"></p>
                   </div>
                   <div id="__Page1__card">
                     <div id="__Page1__lock"></div>
-                    <p id="__Page1__cardText">1跑題卡</p>
+                    <p id="__Page1__cardText">赦免卡</p>
                   </div>
-                  <div id="__Page1__card">
-                    <div id="__Page1__lock"></div>
-                    <p id="__Page1__cardText"></p>
-                  </div>
-                </div>
-                <div id="__Page1__cardline">
-                  <div id="__Page1__card">
-                    <div id="__Page1__lock"></div>
-                    <p id="__Page1__cardText">1勞務卡</p>
-                  </div>
-                  <div id="__Page1__card">
-                    <div id="__Page1__lock"></div>
-                    <p id="__Page1__cardText">1主揪卡</p>
-                  </div>
-                  <div id="__Page1__card">
-                    <div id="__Page1__lock"></div>
-                    <p id="__Page1__cardText"></p>
-                  </div>
-                </div>
-              </div>
-              <div id="__Page1__collection">
-                <div id="__Page1__cardline">
-                  <div id="__Page1__card">
-                    <div id="__Page1__lock"></div>
-                    <p id="__Page1__cardText">2分期卡</p>
-                  </div>
-                  <div id="__Page1__card">
-                    <div id="__Page1__lock"></div>
-                    <p id="__Page1__cardText">2討債卡</p>
-                  </div>
-                  <div id="__Page1__card">
-                    <div id="__Page1__lock"></div>
+                  <div class="bg-lock" id="__Page1__card">
+                    <div class="lock" id="__Page1__lock"></div>
                     <p id="__Page1__cardText"></p>
                   </div>
                 </div>
                 <div id="__Page1__cardline">
-                  <div id="__Page1__card">
-                    <div id="__Page1__lock"></div>
+                  <div class="bg-lock" id="__Page1__card">
+                    <div class="lock" id="__Page1__lock"></div>
+                    <p id="__Page1__cardText"></p>
+                  </div>
+                  <div class="bg-lock" id="__Page1__card">
+                    <div class="lock" id="__Page1__lock"></div>
                     <p id="__Page1__cardText"></p>
                   </div>
                   <div id="__Page1__card">
                     <div id="__Page1__lock"></div>
-                    <p id="__Page1__cardText">2跑題卡</p>
-                  </div>
-                  <div id="__Page1__card">
-                    <div id="__Page1__lock"></div>
-                    <p id="__Page1__cardText"></p>
-                  </div>
-                </div>
-                <div id="__Page1__cardline">
-                  <div id="__Page1__card">
-                    <div id="__Page1__lock"></div>
-                    <p id="__Page1__cardText">2勞務卡</p>
-                  </div>
-                  <div id="__Page1__card">
-                    <div id="__Page1__lock"></div>
-                    <p id="__Page1__cardText">2主揪卡</p>
-                  </div>
-                  <div id="__Page1__card">
-                    <div id="__Page1__lock"></div>
-                    <p id="__Page1__cardText"></p>
+                    <p id="__Page1__cardText">甜點卡</p>
                   </div>
                 </div>
               </div>
@@ -925,9 +925,9 @@
         <div id="__Page47__form__container">
           <form id="__Page47__spending-tracker">
             <div id="__Page47__inform__bar">
-              <input id="__Page47__item_name" type="text" name="account_name" placeholder="家樂福">
+              <input id="__Page47__item_name" type="text" name="account_name" value="麥當勞" readonly>
               <!-- label for="account_name"><img src="./midterm_icon/edit.png" alt="cancel" onclick=""></label-->
-              <input id="__Page47__item_cost" type="text" name="account_cost" inputmode="decimal" placeholder="$ 2033">
+              <input id="__Page47__item_cost" type="text" name="account_cost" inputmode="decimal" value="$ 64" readonly>
               <hr class="break_style1">
             </div>
             <div id="other_infos">
@@ -937,10 +937,7 @@
                     <p class="__Page47__cardNameText" id="__Page47__cardfrontNameText">討債卡</p>
                   </div>
                   <div id="__Page47__cardStar"><img class="__Page2__starimg" src="./midterm_icon/star_1.png"><img class="__Page2__starimg" src="./midterm_icon/star_1.png"><img class="__Page2__starimg" src="./midterm_icon/star_1.png"><img class="__Page2__starimg" src="./midterm_icon/star_2.png"><img class="__Page2__starimg" src="./midterm_icon/star_3.png"></div>
-                  <div class="__Page47__imgUpload" id="__Page47__imgUpload">
-                    <div class="__Page47__cameraImg" id="__Page47__frontcameraImg"></div>
-                    <p class="__Page47__uploadText" id="__Page47__uploadText">上傳圖片</p>
-                  </div>
+                  <div class="__Page47__imgUpload" id="__Page47__imgUpload"><img src="final_photo/oldman.png" alt="討債卡梗圖" style="height:22vh;width:65vw"></div>
                   <div class="__Page47__spec" id="__Page47__spec">
                     <p id="__Page47__specText">功能說明</p>
                     <textarea id="__Page47__specInput" readonly="" disabled="disabled" type="text">發給那個欠錢不還的冤親債主。</textarea>
