modify the detail of account tracking

--- a/test/client/Split.html
+++ b/test/client/Split.html
@@ -648,7 +648,7 @@
             <p class="__Page38__costtotal3" id="__Page38__costtotal3"></p>
           </div>
           <div id="__Page38__costtotal__container">
-            <p class="__Page38__costtotal1" id="__Page38__costtotal1">零頭 $ </p>
+            <p class="__Page38__costtotal1" id="__Page38__costtotal1">零頭 $</p>
             <p class="__Page38__costtotal2" id="__Page38__remainmoney">0.00</p>
           </div>
         </div>
@@ -816,7 +816,7 @@
             </div>
           </div>
           <div id="__Page61__decorates__container"></div>
-          <div id="spin_button" style="position: absolute;left: 0px;top: 0px;border-radius: 100%;cursor: pointer"><img class="test" src="./midterm_icon/go.png" style="position: absolute;left: calc(50vw - 50px - 0px);top: calc(24.8vh + 27.5vh + 6px - 50px);width: 100px;height: 100px;margin-left:calc(0px);"></div>
+          <div id="spin_button" style="position: absolute;left: 0px;top: 0px;border-radius: 100%;cursor: pointer"><img class="test" src="./midterm_icon/Go.png" style="position: absolute;left: calc(50vw - 50px - 0px);top: calc(24.8vh + 27.5vh + 6px - 50px);width: 100px;height: 100px;margin-left:calc(0px);"></div>
           <div style="height:300px; width:300px; background-color: black; border-radius: 500px; position:absolute; z-index:-1;left: calc(50.4vw - 150px);top: calc(45.8vh + 5.5vh + 6px - 150px);margin-left:calc(0px);"></div>
           <canvas id="__Page61__canvas" width="300" height="300" style="margin-left:calc(1.2vw);margin-top:calc(21vh - 150px)"></canvas>
           <div id="__Page61__distributemoney__container">
