--- a/test/client/Split.html
+++ b/test/client/Split.html
@@ -736,7 +736,7 @@
 			<div id="__Page38__calculate__bar">
 			  <div id="__Page38__calculate_realcost">
 			    <p class="__Page38__realcost">$&nbsp;</p>
-			    <input class="__Page38__realcost2" type="text" placeholder="508" id="__Page38__realcost2 1">
+			    <p class="__Page38__realcost2" type="text" placeholder="508" id="__Page38__realcost2 1">508</p>
 			  </div>
 			</div>
 		  </label>
@@ -747,7 +747,7 @@
 			<div id="__Page38__calculate__bar">
 			  <div id="__Page38__calculate_realcost">
 			    <p class="__Page38__realcost">$&nbsp;</p>
-			    <input class="__Page38__realcost2" type="text" placeholder="508" id="__Page38__realcost2 2">
+			    <p class="__Page38__realcost2" type="text" placeholder="508" id="__Page38__realcost2 2">508</p>
 			  </div>
 			</div>
 		  </label>
@@ -758,7 +758,7 @@
 			<div id="__Page38__calculate__bar">
 			  <div id="__Page38__calculate_realcost">
 			    <p class="__Page38__realcost">$&nbsp;</p>
-			    <input class="__Page38__realcost2" type="text" placeholder="508" id="__Page38__realcost2 3">
+			    <p class="__Page38__realcost2" type="text" placeholder="508" id="__Page38__realcost2 3">508</p>
 			  </div>
 			</div>
 		  </label>
@@ -769,7 +769,7 @@
 			<div id="__Page38__calculate__bar">
 			  <div id="__Page38__calculate_realcost">
 			    <p class="__Page38__realcost">$&nbsp;</p>
-			    <input class="__Page38__realcost2" type="text" placeholder="508" id="__Page38__realcost2 4">
+			    <p class="__Page38__realcost2" type="text" placeholder="508" id="__Page38__realcost2 4">508</p>
 			  </div>
 			</div>
 		  </label>
@@ -1153,7 +1153,7 @@
 			<div id="__Page38__calculate__bar">
 			  <div id="__Page38__calculate_realcost">
 			    <p class="__Page38__realcost">$&nbsp;</p>
-			    <input class="__Page38__realcost2" type="text" placeholder="508" id="__Page69__realcost2 1">
+			    <p class="__Page38__realcost2" type="text" placeholder="508" id="__Page69__realcost2 1">508</p>
 			  </div>
 			</div>
 		  </label>
@@ -1164,7 +1164,7 @@
 			<div id="__Page38__calculate__bar">
 			  <div id="__Page38__calculate_realcost">
 			    <p class="__Page38__realcost">$&nbsp;</p>
-			    <input class="__Page38__realcost2" type="text" placeholder="509" id="__Page69__realcost2 2">
+			    <p class="__Page38__realcost2" type="text" placeholder="509" id="__Page69__realcost2 2">509</p>
 			  </div>
 			</div>
 		  </label>
@@ -1175,7 +1175,7 @@
 			<div id="__Page38__calculate__bar">
 			  <div id="__Page38__calculate_realcost">
 			    <p class="__Page38__realcost">$&nbsp;</p>
-			    <input class="__Page38__realcost2" type="text" placeholder="508" id="__Page69__realcost2 3">
+			    <p class="__Page38__realcost2" type="text" placeholder="508" id="__Page69__realcost2 3">508</p>
 			  </div>
 			</div>
 		  </label>
@@ -1186,7 +1186,7 @@
 			<div id="__Page38__calculate__bar">
 			  <div id="__Page38__calculate_realcost">
 			    <p class="__Page38__realcost">$&nbsp;</p>
-			    <input class="__Page38__realcost2" type="text" placeholder="508" id="__Page69__realcost2 4">
+			    <p class="__Page38__realcost2" type="text" placeholder="508" id="__Page69__realcost2 4">508</p>
 			  </div>
 			</div>
 		  </label>
